# buy-me-a-gift

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  run.sh  settings.py  urls.py
accounts/: manager.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py
fixtures/: accounts.json  products.json
lib/: mixins.py  tests.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_options.py
